<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/subscribeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_bar"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:paddingTop="35dp"
        android:text="@string/subscribe_text"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/header_bar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/header_border"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/header_logo"
            android:layout_width="152dp"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/umentioned_header_icon"
            android:src="@drawable/bluelogo" />

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="18dp"
            android:layout_height="28dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/back" />
    </RelativeLayout>

    <Button
        android:id="@+id/doneButton"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="96dp"
        android:background="@drawable/done_subscribe_rounded_btn"
        android:text="@string/subscribe_done_button"
        android:textColor="@color/white" />

</RelativeLayout>