<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/confessions_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <ImageView
            android:id="@+id/stack1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icons_container "
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/stack" />

        <ImageView
            android:id="@+id/white_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="60dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:paddingBottom="80dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/back1" />

        <RelativeLayout
            android:id="@+id/content_container"
             android:layout_alignTop="@+id/white_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp" >

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="120dp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/subTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="170dp"
                android:fontFamily="sans-serif"
                android:text="@string/subTitle"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/schoolInput"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="230dp"
                android:background="@drawable/rounded_edittext"
                android:cursorVisible="false"
                android:drawableRight="@drawable/search2x"
                android:gravity="center"
                android:hint="@string/edittext_hint_label"
                android:maxLength="17"
                android:maxLines="1"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:singleLine="true"
                android:textSize="22sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/icons_container "
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignTop="@+id/white_frame"
            android:layout_alignBottom="@+id/white_frame"
            android:layout_alignLeft="@+id/white_frame"
            android:layout_alignRight="@+id/white_frame"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/logIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/log_in_label"
                android:layout_alignParentBottom="true" 
                android:layout_marginBottom="24dp"
                android:textColor="@color/black"
                android:textSize="20sp" />
            
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>